delete modif application-docker & modif cicd error R14